# SDL_project

./: CMakeLists.txt  README.md  main.c
resources/: scores.txt
subUnits/include/: field_functions.h  scenes.h  score_functions.h  sdl_functions.h  shape_rotation_functions.h  tetris_constants.h  tetris_types.h  timer_callbacks.h
subUnits/src/: field_functions.c  scenes.c  score_functions.c  sdl_functions.c  shape_rotation_functions.c  tetris_constants.c  timer_callbacks.c
